# DICI

./: .gitattributes  CMakeLists.txt  DICI-decode.cpp  DICI-encode.cpp  README.md
docs/: manual.md
includes/: DICIdecode.h  DICIencode.h  Decode.h  Encode.h  decode.h  encode.h  filter.h  filter_reverse.h
sources/: DICIdecode.cpp  DICIencode.cpp  Decode.cpp  Encode.cpp  encode.cpp  filter.cpp  filter_reverse.cpp
